change addVideo method for selenoid